[package]
name = "theta-chart"
version = "0.0.8"
edition = "2021"
authors = ["LangPham"]
license = "MIT"
repository = "https://github.com/theta-vn/theta-chart"
description = "Theta_chart is a collection of utilities to make performing certain calculations more convenient"
readme = "./README.md"

[dependencies]
palette = "0.7"
nalgebra = "0.32"
approx = "0.5"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
robust = "1.1.0"